# test_task

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 066fc70e34f3_base.py  41630a5e9554_add_default_datetime_into_search_log.py  95e062bf2102_add_default_datetime_into_search_log.py  b4f7c6add0bb_update_user_with_api_key.py  c51d3ea25e58_add_search_log.py  cab4cb959b54_add_query_into_search_log.py
recipes_api/: __main__.py  app.py  config.py  schema.py
recipes_api/helpers/: __init__.py  auth.py  cache.py  search_log.py
recipes_api/integrations/: edamam.py  interface.py  recipepuppy.py  themealdb.py
recipes_api/routes/: index.py  recipes.py  users.py
