[tool.poetry]
name = "recipes_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
alembic = "^1.4.2"
aioredis = "^1.3.1"
asyncpg = "^0.21.0"
psycopg2 = "^2.8.5"
bcrypt = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
